2007-03-16  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.dll.sources
	  Mono.Cecil.csproj
	  Mono.Cecil.Cil/OpCode.cs
	  Mono.Cecil.Cil/OpCodes.cs
	  Mono.Cecil.Cil/Code.cs
	  CodeGen/cecil-gen.rb
	  CodeGen/templates/OpCodes.cs
	  CodeGen/templates/Code.cs:
		Add a Code enumeration to simplify working with
		OpCodes.

2007-03-12  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Metadata/UserStringsHeap.cs:
		Avoid trailing blank on some systems.

2007-02-22  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/ReflectionWriter.cs:
		Deal with sentinels on simple methodrefs.

2007-02-22  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.dll.sources
	  Mono.Cecil.csproj
	  CodeGen/cecil.xml
	  Mono.Cecil.Metadata/ParamPtr.cs
	  Mono.Cecil.Metadata/MethodSpec.cs
	  Mono.Cecil.Metadata/BaseMetadataVisitor.cs
	  Mono.Cecil.Metadata/EventPtr.cs
	  Mono.Cecil.Metadata/MetadataTableReader.cs
	  Mono.Cecil.Metadata/MetadataTableWriter.cs
	  Mono.Cecil.Metadata/MetadataRowReader.cs
	  Mono.Cecil.Metadata/MetadataRowWriter.cs
	  Mono.Cecil.Metadata/PropertyPtr.cs
	  Mono.Cecil.Metadata/FieldPtr.cs
	  Mono.Cecil.Metadata/MethodPtr.cs
	  Mono.Cecil.Metadata/IMetadataVisitor.cs:
		Add *Ptr table definitions.

	* Mono.Cecil.dll.sources
	  Mono.Cecil.csproj
	  Mono.Cecil/CallSite.cs
	  Mono.Cecil/IMethodSignature.cs
	  Mono.Cecil/SentinelType.cs
	  Mono.Cecil/FunctionPointerType.cs
	  Mono.Cecil/MethodReference.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Cil/CodeReader.cs
	  Mono.Cecil.Cil/CodeWriter.cs:
		Implement support for writing function pointers.
		Based on a patch by Argiris Kirtzidis <akyrtzi@gmail.com>

	* Mono.Cecil/Constants.cs:
		Make it public due to some demands.

2007-02-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil.Signatures/SignatureReader.cs:
		do not read enums if the resolution is not forced until
		cecil knows how to write them.

	* Mono.Cecil/ReflectionWriter.cs
	  Mono.Cecil.Signatures/SzArray.cs